--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=bare3302_silat
 DB_USERNAME=bare3321_silat
-DB_PASSWORD=Kambing1
+DB_PASSWORD=K@mbing1
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
