--- a/.env
+++ b/.env
@@ -1,9 +1,11 @@
-APP_NAME=Laravel
+APP_NAME=SILAT
 APP_ENV=local
 APP_KEY=base64:AongiB1ibEsZRg4RGBCrZjoPGhs1EbcRiO24GeQJ8Wc=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
+
+API_VERSION=1.0.1
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -24,7 +26,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_DATABASE=pesantren
+DB_DATABASE=silat
 DB_USERNAME=postgres
 DB_PASSWORD=rahasia
 
