--- a/public/frontend/package.json
+++ b/public/frontend/package.json
@@ -13,6 +13,8 @@
     "@reduxjs/toolkit": "^2.4.0",
     "apexcharts": "^3.45.2",
     "flatpickr": "^4.6.13",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "jsvectormap": "^1.6.0",
     "next": "^14.2.4",
     "react": "^18",
