--- a/public/frontend/package.json
+++ b/public/frontend/package.json
@@ -21,7 +21,8 @@
     "react-apexcharts": "^1.4.1",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
