--- a/public/frontend/package.json
+++ b/public/frontend/package.json
@@ -22,6 +22,7 @@
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
+    "react-toastify": "^11.0.3",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
