--- a/public/frontend/package.json
+++ b/public/frontend/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^18",
     "react-redux": "^9.1.2",
     "react-toastify": "^11.0.3",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^20",
