--- a/public/frontend/package.json
+++ b/public/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@next/bundle-analyzer": "^15.1.6",
     "@reduxjs/toolkit": "^2.4.0",
+    "@tinymce/tinymce-react": "^6.1.0",
     "apexcharts": "^3.45.2",
     "flatpickr": "^4.6.13",
     "jspdf": "^2.5.2",
@@ -25,6 +26,7 @@
     "react-redux": "^9.1.2",
     "react-toastify": "^11.0.3",
     "redux-persist": "^6.0.0",
+    "tinymce-react-demo": "^0.0.14-t",
     "zod": "^3.24.2"
   },
   "devDependencies": {
