--- a/.env
+++ b/.env
@@ -26,9 +26,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=silat
-DB_USERNAME=root
-DB_PASSWORD=rahasia
+DB_DATABASE=bare3321_silat
+DB_USERNAME=bare3321_silat
+DB_PASSWORD=Kambing1
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
