--- a/public/frontend/package.json
+++ b/public/frontend/package.json
@@ -16,6 +16,7 @@
     "@lexical/react": "^0.30.0",
     "@next/bundle-analyzer": "^15.1.6",
     "@reduxjs/toolkit": "^2.4.0",
+    "@svgr/webpack": "^8.1.0",
     "apexcharts": "^3.45.2",
     "flatpickr": "^4.6.13",
     "jspdf": "^2.5.2",
